samples/_failures_safe/1761539737_20f267_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ff493aa4.c: In function ‘next_token’:
./samples/SAFE/__tmp_ff493aa4.c:158:5: error: expected declaration or statement at end of input
  158 |     }
      |     ^
